# noir

./: CHANGELOG.md  Cargo.toml
.github/workflows/: rust.yml
crates/nargo/: Cargo.toml
crates/nargo/src/cli/: verify_cmd.rs
crates/nargo_cli/: Cargo.toml
crates/nargo_cli/src/: backends.rs
crates/nargo_cli/src/cli/: codegen_verifier_cmd.rs
crates/noirc_evaluator/src/: lib.rs
crates/noirc_evaluator/src/ssa/: builtin.rs
crates/noirc_evaluator/src/ssa/acir_gen/operations/: return.rs
