[package]
name = "nargo_cli"
description = "Noir's package manager"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Rename binary from `nargo_cli` to `nargo`
[[bin]]
name = "nargo"
path = "src/main.rs"

[build-dependencies]
rustc_version = "0.4.0"
build-data = "0.1.3"

[dependencies]
cfg-if.workspace = true
clap.workspace = true
dirs.workspace = true
url.workspace = true
iter-extended.workspace = true
nargo.workspace = true
noirc_driver.workspace = true
noirc_frontend.workspace = true
noirc_abi.workspace = true
acvm.workspace = true
toml.workspace = true
serde.workspace = true
thiserror.workspace = true
const_format = "0.2.30"
hex = "0.4.2"
serde_json = "1.0"
termcolor = "1.1.2"
color-eyre = "0.6.2"

# Backends
aztec_backend = { optional = true, package = "acvm-backend-barretenberg", default-features = false, git = "https://github.com/noir-lang/aztec_backend", rev = "9fed6e52778d993d7742c46bbeec66087958c075" }

[dev-dependencies]
tempdir = "0.3.7"
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
predicates = "2.1.5"

[features]
default = ["plonk_bn254"]
plonk_bn254 = ["aztec_backend/native"]
plonk_bn254_wasm = ["aztec_backend/wasm"]

